js262/test/language/module-code/parse-err-decl-pos-import-try-try.js


/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

try {
  import v from './decl-pos-import-try-try.js';
} catch (err) { }
